@@ -35,5 +35,5 @@ Disassembly of section \.text:
    80094:	41b2                	moveq 1,\$r11
 #...
 00080098 <tlsdsofn>:
-   80098:	6fae 8000 0000      	move\.d 80 <x>,\$r10
+   80098:	6fae fcff ffff      	move\.d 0xfffffffc,\$r10
 #...
